--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+.scrollbar-hid3 {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
